--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     <div class="div-play"><button class="play-click">Play</button></div>
 
+    <button class="play-again">Play Again</button>
+
     <p class="game-paragraph">
       This game doesn't give you the same playing pleassure as 'Cyberpunk' but
       still I'm pretty sure that sometimes you want someone to play "Rock,
